<resources>
    <string name="app_name">凛ちゃんねる</string>
    <string name="baby_name">凛</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">設定</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_live">Live</string>
    <string name="menu_live2">Live 2 (MediaPlayer)</string>
    <string name="menu_live3">Live 3 (ExoPlayer)</string>

    <!-- Messages Preferences -->
    <string name="url">URL</string>
    <string name="live_url_living_key">live_url_living</string>
    <string name="live_url_living_name">Living URL</string>
    <string name="live_url_bedroom_key">live_url_bedroom</string>
    <string name="live_url_bedroom_name">Bedroom URL</string>
    <string name="current_live_location_key">current_live_location</string>
    <string name="webhook_url_key">webhook_url</string>
    <string name="webhook_url_name">Webhook URL</string>
    <string name="isMute_key">is_mute</string>
    <string name="isMute_name">ミュート</string>
    <string name="album_id_key">album_id</string>
    <string name="album_id_name">アルバムID</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_capture">label_capture</string>

    <!-- 他の文字列 -->
    <string name="player_error_message">%1$s の再生に失敗しました。接続を確認してください。</string>
    <string name="player_init_error_message">%1$s のプレーヤー初期化に失敗しました。</string>
</resources>