<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_live"
            android:title="@string/menu_live" />
        <item
            android:id="@+id/nav_live2"
            android:icon="@drawable/ic_menu_live"
            android:title="@string/menu_live2" />
        <item
            android:id="@+id/nav_live3"
            android:icon="@drawable/ic_menu_live"
            android:title="@string/menu_live3" />
    </group>
</menu>